--- a/mid-01-20+3B017021.html
+++ b/mid-01-20+3B017021.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-        <h2>6.台.一.教.育.農.場.</h2>
+        <h2>興趣</h2>
     
         成立於民國79年3月1日的台一種苗，現已有6處育苗場區，栽培溫室超過100棟，年產超過8,000株穴盤苗。<br>
         目前台一種苗已成功轉型經營為台一生態教育農園，正努力在提升農業與休閒品質為一貫的宗旨。如今走近台一生態教育農園，第一眼所見的建物即是美麗的花神廟。圓而高聳的建築造型，中間擺置有純白的花仙子塑像，外層環繞著小水池，而池水包圍的基座上，依序畫著12個星座的圖騰，為許願人祝福。<br>
@@ -18,7 +18,7 @@
             <dt>地　　址：南投縣埔里鎮中山路一段176號 </dt>
             <dt>電　　話：049-2901346</dt>
             <dt>傳　　真：049-2989012</dt>
-            <a href="puil_main-20+3B017021.html">回上頁</a>
+            <a href="mid-main-20+3B017021.html">回上頁</a>
         </dl>
     </section>
 </body>
