--- a/mid-04-20+3B017021.html
+++ b/mid-04-20+3B017021.html
@@ -2,22 +2,11 @@
 <html lang="zh_tw">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="埔里景點資料">
-    <meta name="keywords" content="埔里景點">
-    <meta name="author" content="20+3B017021">
-    <title>鯉.魚.潭.</title>
+    <title>技能</title>
 </head>
 <body>
-    <section>
-        <h2>鯉.魚.潭.</h2>
-        鯉魚潭位在埔里鎮虎子山下，由大洞站下車，由左側過大洞橋前行 2.2 公里即至。鯉魚潭佔地20公頃，上有堤橋將分成兩部份，楊柳如煙，山巒似霧，山光雲影，魚躍鳥翔，風光恬靜迷人。 <br>
-        湖上有座水沙連大飯店，業者並指出鯉魚潭有九穴，讓遊客依藏寶圖尋找地穴，極富趣味性，租台腳踏車漫遊在湖邊，浪漫極了。<br>
-        <dl>
-            <dt>地理位置：台十四線至埔里，走信義路過市區右轉鯉魚路即可至</dt>
-            <dt>電　　話：049-2992020</dt>
-            <dt>傳　　真：049-2986458</dt>
-        </dl>
-        <a href="puil_main-20+3B017021.html">回上頁</a>
-    </section>
+    <h1>技能</h1>
+    我現在會的技能有html,java,cpp,c,python。
+        <a href="mid-main-20+3B017021.html">回上頁</a>
 </body>
 </html>
