--- a/mid-05-20+3B017021.html
+++ b/mid-05-20+3B017021.html
@@ -9,16 +9,13 @@
 </head>
 <body>
     <section>
-    <h2>10.中.台.禪.寺.</h2>
-    「暮鼓晨鐘，青燈古佛」是否在您的腦海中，早已勾勒出一幅佛門清淨無爭的生活景象。<br>
-    中台禪寺系由惟覺長老所住持，目前正在繼建設中，目標是可容二千名出家眾，以及一千名居士在此掛單，雖然寺內乃在建設，但在寺內二百餘名師父整理下，景觀雅緻並有特殊藝石、奇大擺設，同時一株難得見到的百年千層菩提樹。<br>
-    前往的路線建設您在中潭公路過觀音隧道後，過觀音橋，此路線沿路有路標，並且可先前往玉佛寺、圓通寺、佛光寺參觀，一天的時間是很合適的。另一條即由埔里市區往牛眠里的方向，此路亦有路標。<br>
+    <h2>聯絡資訊</h2>
         <dl>
-            <dt>地　　址：南投縣埔里鎮中台路一號</dt>
-            <dt>電　　話：049-2930215</dt>
-            <dt>電子信箱：ctworld@mail.ctcm.org.tw</dt>
+            <dt>地　　址：台中市大里區東明路101號</dt>
+            <dt>電　　話：0902-108-580</dt>
+            <dt>電子信箱：3b017021@gm.student.ncut.edu.tw</dt>
         </dl>
     </section>
-    <a href="puil_main-20+3B017021.html">回上頁</a>
+    <a href="mid-main-20+3B017021.html">回上頁</a>
 </body>
 </html>
