--- a/mid-main-20+3B017021.html
+++ b/mid-main-20+3B017021.html
@@ -5,104 +5,31 @@
     <meta name="description" content="埔里景點資料">
     <meta name="keywords" content="埔里景點">
     <meta name="author" content="20+3B017021">
-    <title>埔里景點20+3B017021</title>
+    <title>站長介紹+20+3B017021</title>
 </head>
-<html><section id="0">
-    <h1>埔里景點介紹-<a href="https://www.ncut.edu.tw/index.php">勤益科大</a>20+3B017021+陳浩平</h1>
+<html>
+<h1>簡介</h1>
+<section id="0">
     <table frame="border" rules="all">
         <tr>
-            <th>頁內連結</th>
             <th>站內連結</th>
         </tr>
         <tr>
             <td>
                 <ul>
-                    <li><a href="#1">牛.耳.藝.術.公.園</a></li>
-                    <li><a href="#2">木.生.昆.蟲.博.物.館</a></li>
-                    <li><a href="#3">廣.興.紙.廠</a></li>
-                    <li><a href="#4">埔.里.酒.廠</a></li>
-                    <li><a href="#5">龍.南.天.然.漆.文.物.館</a></li>
+                    <li><a href="mid-01-20+3B017021.html">興趣</a></li>
+                    <li><a href="mid-02-20+3B017021.html">夢想</a></li>
+                    <li><a href="mid-03-20+3B017021.html">專長</a></li>
+                    <li><a href="mid-04-20+3B017021.html">技能</a></li>
+                    <li><a href="mid-05-20+3B017021.html">聯絡資訊</a></li>
                 </ul>
-            </td>
-            <td>
-                <ol start="6">
-                    <li><a href="puli-06-20+3B017021.html">台.一.教.育.農.場</a></li>
-                    <li><a href="puli-07-20+3B017021.html">台.光.香.草.園</a></li>
-                    <li><a href="puli-08-20+3B017021.html">地.理.中.心.碑</a></li>
-                    <li><a href="puli-09-20+3B017021.html">鯉.魚.潭</a></li>
-                    <li><a href="puli-10-20+3B017021.html">中.台.禪.寺</a></li>
-                </ol>
             </td>
         </tr>
     </table>
 </section>
-<section id="1">
-    <h2>1.牛.耳.藝.術.公.園.</h2>
-
-    牛耳藝術公園，佔地約二萬餘坪，園內密植樹木花草，綠意盎然，本園以陳列樸素藝術家林淵先生的作品為主，有石雕、木雕、繪畫、刺繡、拼裝作品數千件，為全台最具本土文化特色之藝公園，園內設有童玩廣場，牛耳藝廊、林淵美術館、露天咖啡座、養蜂生態區、親子陶區、及特殊植物花卉介紹等，園內景觀自然優雅，是眺望埔里的最佳景點，更是集觀光、藝術、休閒、美術教學於一身的文化園區。<br>
-    <dl>
-        <dt>開放時間：每日8:00AM-21:00PM．全年無休</dt>
-        <dt>地　　址：南投縣埔里鎮中山路1-1號</dt>
-        <dt>服務專線：(049)2912248</dt>
-        <dt>傳　　真：(049)2914341</dt>
-    </dl>
-    <a href="#0">回頁首</a>
-</section>
-<section id="2">
-    <h2>2.木.生.昆.蟲.博.物.館.</h2>
-
-    木生昆蟲館館內收藏了世界各地之昆蟲標本約十萬餘種！為世界收藏最豐富的昆蟲博物館。館內展示世界各國稀有昆蟲之標本，如蝴蝶、甲蟲、蜻蜒、螳螂、竹節蟲等昆蟲，約一萬六千多種，其中有世界唯一身價八百萬之蝴蝶，及雌雄同體型之蝴蝶，鍬形蟲….等，身價不凡之昆蟲數不勝枚舉！為全台唯一的昆蟲科學博物館，是學習自然科學的最佳場所。<br>
-    <dl>
-        <dt>開放時間：每日8:00AM-17:00PM．全年無休</dt>
-        <dt>地　　址：南投縣埔里鎮南村里南村路6-2號（愛蘭橋附近）</dt>
-        <dt>服務專線：(049)2613311</dt>
-        <dt>傳　　真：(049)2910313</dt>
-    </dl>
-    <a href="#0">回頁首</a>
-</section>
-
-
-<section id="3">
-    <h2>3.廣.興.紙.廠.</h2>
-
-    「藝之鎮」埔里，傳承造工藝已七十年之久，精緻的手工紙業，聞名中外。位於埔里愛蘭台地，紹興酒泉旁的「廣興紙寮」秉持以傳統文化創新意，精研開發出各種精緻的手工紙，走一趟廣興見證中國二千年前天工開物的歷史，廠內設有蔡倫造紙教室，讓每位旅客能親自動手造紙感受文化的傳承，並將成品與古老印刷結合，完成自己的紀念作品。<br>
-
-    <dl>
-        <dt>開放時間：每日9:00AM-17:00PM．全程2-3小時</dt>
-        <dt>地　　址：南投縣埔里鎮鐵山里鐵山路310號</dt>
-        <dt>服務專線：(049)2913037</dt>
-        <dt>傳　　真：(049)2913038</dt>
-    </dl>
-    <a href="#0">回頁首</a>
-</section>
-
-
-<section id="4">
-    <h2>4.埔.里.酒.廠.</h2>
-    埔里紹興，聞名中外，本廠近年來致力於結合埔里地區藝術文化資產，全力營造「紹興酒鄉」的特色，並成立全台首座的「酒文化館」傳承歷史酒鄉文化，同時讓傳統酒業創新意，開發出一系列佳餚；紹興米糕、紹興滷味、菜葉蛋、不老蛋、瓜子等，陶醉味覺，此外本廠新開發上市的「愛蘭白酒」，風味絕佳，自推出以來深受各界好評，館內有免費品酒服務，歡迎您來品嚐。<br>
-    <dl>
-        <dt>開放時間：每日8:00AM-17:00PM</dt>
-        <dt>地　　址：南投縣埔里鎮中山路三段219號</dt>
-        <dt>服務專線：(049)2901649</dt>
-        <dt>傳　　真：(049)2981861</dt>
-    </dl>
-    <a href="#0">回頁首</a>
-</section>
-
-<section id="5">
-    <h2>5.龍.南.天.然.漆.文.物.館.</h2>
-
-    傳承中國天然漆五千年的傳統文化，從種植漆樹，採漆液、製精漆，龍南秉持以傳業創新意，開發出天然精緻之日常生活用品及藝術品，是台灣碩果僅存的天然漆業，館內展示了台灣天然漆業的發史與文物及明清漆藝精品，是已然繁華落盡的台灣天然漆業的珍貴見證。本館更提供旅客親手繪製漆畫的服務，是一兼學習創作和觀賞的觀光重點。<br>
-    <dl>
-        <dt>開放時間：每日09:00AM-18:00PM參觀免費，全年無休</dt>
-        <dt>地　　址：南投縣埔里鎮北平街211-1號（埔里國小旁）</dt>
-        <dt>服務專線：(049)2982076</dt>
-        <dt>傳　　真：(049)2994021</dt>
-    </dl>
-    <a href="#0">回頁首</a>
-</section>
-
-
+這次作業我分成五部分介紹自己
+<h2>自我介紹</h2>
+大家好，我叫陳浩平，現在就讀國立勤益科技大學-資訊工程系二年級以上分成五部分介紹自己。
 </body>
 
 </html>
