--- a/mid-01-20+3B017021.html
+++ b/mid-01-20+3B017021.html
@@ -5,7 +5,7 @@
     <meta name="description" content="埔里景點資料">
     <meta name="keywords" content="埔里景點">
     <meta name="author" content="20+3B017021">
-    <title>台.一.教.育.農.場.</title>
+    <title>興趣</title>
 </head>
 <body>
     <h2>興趣</h2>
