--- a/mid-02-20+3B017021.html
+++ b/mid-02-20+3B017021.html
@@ -8,7 +8,7 @@
 <body>
     <section>
         <h2>夢想</h2>
-我的夢想是以後開一家公司。
+我的夢想是以後開一家公司。<br>
         <a href="mid-main-20+3B017021.html">回上頁</a>
     </section>
 </body>
