--- a/mid-03-20+3B017021.html
+++ b/mid-03-20+3B017021.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>專長</h1>
-    我的專長是在電腦方面的。
+    我的專長是在電腦方面的。<br>
         <a href="mid-main-20+3B017021.html">回上頁</a>
 </body>
 </html>
