--- a/mid-04-20+3B017021.html
+++ b/mid-04-20+3B017021.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>技能</h1>
-    我現在會的技能有html,java,cpp,c,python。
+    我現在會的技能有html,java,cpp,c,python。<br>
         <a href="mid-main-20+3B017021.html">回上頁</a>
 </body>
 </html>
