--- a/mid-01-20+3B017021.html
+++ b/mid-01-20+3B017021.html
@@ -2,9 +2,8 @@
 <html lang="zh_tw">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="埔里景點資料">
-    <meta name="keywords" content="埔里景點">
     <meta name="author" content="20+3B017021">
+    <link rel="stylesheet" href="style.css">
     <title>興趣</title>
 </head>
 <body>
