--- a/mid-02-20+3B017021.html
+++ b/mid-02-20+3B017021.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="20+3B017021">
+    <link rel="stylesheet" href="style.css">
     <title>夢想</title>
 </head>
 <body>
