--- a/mid-04-20+3B017021.html
+++ b/mid-04-20+3B017021.html
@@ -2,6 +2,7 @@
 <html lang="zh_tw">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>技能</title>
 </head>
 <body>
