--- a/mid-main-20+3B017021.html
+++ b/mid-main-20+3B017021.html
@@ -2,9 +2,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="埔里景點資料">
-    <meta name="keywords" content="埔里景點">
     <meta name="author" content="20+3B017021">
+    <link rel="stylesheet" href="style.css">
     <title>站長介紹+20+3B017021</title>
 </head>
 <html>
@@ -27,9 +26,8 @@
         </tr>
     </table>
 </section>
-這次作業我分成五部分介紹自己
+<p>這次作業我分成五部分介紹自己</p>
 <h2>自我介紹</h2>
-大家好，我叫陳浩平，現在就讀國立勤益科技大學-資訊工程系二年級以上分成五部分介紹自己。
+<p>大家好，我叫陳浩平，現在就讀國立勤益科技大學-資訊工程系二年級以上分成五部分介紹自己。</p>
 </body>
-
 </html>
