--- a/mid-05-20+3B017021.html
+++ b/mid-05-20+3B017021.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="20+3B017021">
-    <title>中.台.禪.寺.</title>
+    <link rel="stylesheet" href="style.css">
+    <title>聯絡資訊</title>
 </head>
 <body>
-    <section>
     <h2>聯絡資訊</h2>
         <dl>
             <dt>地　　址：台中市大里區東明路101號</dt>
             <dt>電　　話：0902-108-580</dt>
             <dt>電子信箱：3b017021@gm.student.ncut.edu.tw</dt>
         </dl>
-    </section>
-    <a href="mid-main-20+3B017021.html">回上頁</a>
+        <p><a href="mid-main-20+3B017021.html">回上頁</a></p>
 </body>
 </html>
