--- a/mid-02-20+3B017021.html
+++ b/mid-02-20+3B017021.html
@@ -9,8 +9,8 @@
 <body>
     <section>
         <h2>夢想</h2>
-我的夢想是以後開一家公司。<br>
-        <a href="mid-main-20+3B017021.html">回上頁</a>
+<p>我的夢想是以後開一家公司。</p>
+        <p><a href="mid-main-20+3B017021.html">回上頁</a></p>
     </section>
 </body>
 </html>
