--- a/mid-01-20+3B017021.html
+++ b/mid-01-20+3B017021.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>興趣</h2>
-    <p>我的興趣是玩電腦遊戲。</p>
+    <p>我的興趣是玩電腦遊戲，目前有再玩minecraft。</p>
     <p><a href="mid-main-20+3B017021.html">回上頁</a></p>
 </body>
 </html>
