--- a/mid-01-20+3B017021.html
+++ b/mid-01-20+3B017021.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h2>興趣</h2>
-    <p>我的興趣是玩電腦遊戲，目前有再玩minecraft。</p>
+    <p>我的興趣是玩電腦遊戲，目前有再玩minecraft，在minecraft的體系中我喜歡玩模組。</p>
+    <p>另外我還喜歡聽音樂，寫一些程式。</p>
     <p><a href="mid-main-20+3B017021.html">回上頁</a></p>
 </body>
 </html>
