--- a/mid-02-20+3B017021.html
+++ b/mid-02-20+3B017021.html
@@ -10,6 +10,7 @@
     <section>
         <h2>夢想</h2>
 <p>我的夢想是以後開一家公司。</p>
+<p>是一家軟體開發的公司</p>
         <p><a href="mid-main-20+3B017021.html">回上頁</a></p>
     </section>
 </body>
