--- a/mid-03-20+3B017021.html
+++ b/mid-03-20+3B017021.html
@@ -8,6 +8,7 @@
 <body>
     <h1>專長</h1>
     <p>我的專長是在電腦方面的。</p>
+    <p>目前擅長寫程式。</p>
     <p><a href="mid-main-20+3B017021.html">回上頁</a></p>
 </body>
 </html>
